mock-data/large-cluster/k8s/extensions:Ingress/gitlab-gitlab-registry.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
    name: gitlab-registry
    namespace: gitlab
    selfLink: /apis/extensions/v1beta1/namespaces/gitlab/ingresses/gitlab-registry
    uid: 99c93e27-398b-11ea-b115-42010a8001d6
    resourceVersion: '61928761'
    generation: 1
    creationTimestamp: '2020-01-18T00:43:53Z'
    labels:
        app: registry
        chart: registry-0.3.0
        heritage: Helm
        release: gitlab
    annotations:
        certmanager.k8s.io/issuer: gitlab-issuer
        kubernetes.io/ingress.class: gitlab-nginx
        kubernetes.io/ingress.provider: nginx
        nginx.ingress.kubernetes.io/proxy-body-size: '0'
        nginx.ingress.kubernetes.io/proxy-buffering: 'off'
        nginx.ingress.kubernetes.io/proxy-read-timeout: '900'
        nginx.ingress.kubernetes.io/proxy-request-buffering: 'off'
spec:
    tls:
        -
            hosts:
                - registry.example.com
            secretName: gitlab-registry-tls
    rules:
        -
            host: registry.example.com
            http:
                paths:
                    -
                        path: /
                        pathType: ImplementationSpecific
                        backend:
                            serviceName: gitlab-registry
                            servicePort: 5000
status:
    loadBalancer:
        ingress:
            -
                ip: 35.192.33.224
