mock-data/large-cluster/k8s/extensions:Ingress/openfaas-openfaas-ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
    name: openfaas-ingress
    namespace: openfaas
    selfLink: /apis/extensions/v1beta1/namespaces/openfaas/ingresses/openfaas-ingress
    uid: 585170df-3986-11ea-b115-42010a8001d6
    resourceVersion: '61928763'
    generation: 1
    creationTimestamp: '2020-01-18T00:06:15Z'
    labels:
        app: openfaas
        chart: openfaas-5.4.1
        heritage: Helm
        release: openfaas
    annotations:
        kubernetes.io/ingress.class: nginx
spec:
    rules:
        -
            host: gateway.openfaas.local
            http:
                paths:
                    -
                        path: /
                        pathType: ImplementationSpecific
                        backend:
                            serviceName: gateway
                            servicePort: 8080
status:
    loadBalancer: {}
